# handwriting-synthesis

./: .gitignore  README.md  pyproject.toml
src/handwriting_synthesis/: demo.py  hand.py  prepare_data.py  rnn.py  rnn_cell.py  tf_base_model.py
